    - sumliouville(n)                 L(n), sum of liouville(1..n)
    - prime_bigomega(n)               # of factors (with multiplicity)
    - prime_omega(n)                  # of factors (distinct)
    - powint(a, b)                    signed integer a^b
    - mulint(a, b)                    signed integer a*b
    - addint(a, b)                    signed integer a+b
    - subint(a,b)                     signed integer a-b
    - divint(a, b)                    signed integer a/b (floor)
    - modint(a, b)                    signed integer a%b (floor)
    - divrem(a, b)                    Euclidean quotient and remainder
    - tdivrem(a, b)                   Truncated quotient and remainder
    - absint(n)                       integer absolute value
    - negint(n)                       integer negation
    - is_gaussian_prime(a,b)          is a+bi a Gaussian prime
    - random_safe_prime               for n-bit safe primes
    - is_smooth(n,k)                  is n a k-smooth number
    - is_rough(n,k)                   is n a k-rough number
    - is_practical(n)                 is n a practical number
    - is_almost_prime(k,n)            does n have exactly k prime factors
    - almost_prime_count(k,n)         count of integers with exactly k factors
    - almost_prime_count_approx(k,n)  fast approximate k-almost-prime count
    - almost_prime_count_lower(k,n)   fast k-almost-prime count lower bound
    - almost_prime_count_upper(k,n)   fast k-almost-prime count upper bound
    - nth_almost_prime(k,n)           The nth number with exactly k factors
    - nth_almost_prime_approx(k,n)    fast approximate nth k-almost-prime
    - nth_almost_prime_lower(k,n)     fast nth k-almost-prime lower bound
    - nth_almost_prime_upper(k,n)     fast nth k-almost-prime upper bound
    - foralmostprimes {} k,a,b        loop over k-almost-primes
    - is_powerful(n[,k])              is n a k-powerful number (default k=2)